Update benchmarks [ci skip]
Fix throughput benchmarks dropping results under the full JMH run

The Mode.Throughput add benchmarks seeded state once at @Setup(Level.Trial)
and then inserted a new row on every invocation without ever bounding the
working set. Under a full canonical run (5 warmup + 10 measurement
iterations) each fork accumulates millions of entities/rows — and, for the
debounce-backed repositories, an unbounded pending-write queue — until it
exhausts the heap or trips the per-iteration timeout. JMH then silently
drops the failed benchmark, so only latency (SampleTime) results survived a
full run while every add-throughput table rendered empty. Short scoped runs
stayed under the threshold, which masked the problem.

Add a guarded @Setup(Level.Iteration) rewind to each affected benchmark that
returns the store to its seeded baseline between iterations, bounding
accumulation to a single iteration's worth:

- VolatileRepository / JsonFileRepository: clear + reseed (Json also flushes
  and reopens the file).
- SQL-backed lirp repositories: close (drains the debounce queue and flushes)
  then bulk-delete residual rows and reopen onto the baseline.
- Raw JDBC / Exposed / JPA sides: bulk-delete the extra rows.

The rewind is guarded on the add counter so it is a no-op for the read-only
findById/update/flush benchmarks — their measurements and the suite runtime
are unchanged. The add benchmarks stay pure inserts (the reset happens
between iterations, outside the measured window), preserving the historical
metric semantics.

Fresh performance run: outbox-capture benchmark harness

Add the JMH harness needed to quantify the transactional-outbox
per-write cost and feed the JDK 25 performance-record refresh:

- add a single `jmh project(':lirp-kafka')` dependency edge so
  KafkaOutboxSqlRepository / OutboxEventTable are on the JMH classpath
- add OutboxCaptureBenchmark measuring outbox-on vs outbox-off write
  latency (in-process H2, no relay/broker; exercises onl